--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "paypal/rest-api-sdk-php": "^1.14",
+        "stripe/stripe-php": "^7.19",
         "typicms/nestablecollection": "^1.1"
     },
     "require-dev": {
